# aes-agent

./: .gitignore  agent_run.py  mcp_server_test.py  pyproject.toml
configs/: anthropic.yml  custom_parser.yml  default.yml  openai.yml  structured_output.yml
src/aes_agent/: __init__.py  agent.py  environment.py  llm.py  utils.py
src/aes_agent/logic/: custom_parser.py  native.py
src/aes_agent/mcp/: client.py
src/aes_agent/mcp/servers/: default.py  local_search.py  online_search.py
